--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   </head>
   <body>
-    <nav id="topNav" class="navbar navbar-inverse navbar-fixed-top">
+    <nav id="topNav" class="navbar transparent navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="navbar-inner">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
             <span class="sr-only">Toggle Navigation</span>
             <span class="icon-bar"></span>
@@ -71,6 +71,11 @@
 	    <hr>
 	  </div>
 	</header>
+	<div class="quote" id="hidden-sm">
+	  <div class="container-fluid">
+		<h5 id="inner-quote"> "A portrait is not made in the camera but on either side of it." -Edward Steichen </h5>
+	  </div>
+	</div>
 
 
 
