changes to iPad

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 	  <div class="picture">
 	    <h1 class="fancy">Stacy McQuerrey Photography</h1>
 	    <h4 class="smaller">Let me capture your inner fairytale</h4>
-	    
+	    <hr>
 	  </div>
 	</header>
-	<div class="quote" id="hidden-sm">
+	<div class="quote">
 	  <div class="container-fluid">
-		<h5 id="inner-quote"> "A portrait is not made in the camera but on either side of it." -Edward Steichen </h5>
+		<h5 id="inner-quote"> Quotie quote quote quote </h5>
 	  </div>
 	</div>
 
