--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
   </head>
   <body>
-    <nav id="topNav" class="navbar transparent navbar-inverse navbar-fixed-top">
+    <nav id="topNav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
-        <div class="navbar-inner">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle Navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -25,7 +25,7 @@
           </button>
         <a class="navbar-brand heading" href="#home">Stacy McQuerrey</a>
         </div>
-     	<div class="navbar-collapse collapse" id="bs-navbar">
+     	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
      	    <li>
      	      <a class="prime" href="#">Home</a>
@@ -51,7 +51,6 @@
      	    <li>
      	      <a class="prime" href="#">About Me</a>
      	    </li>
-
      	    <li>
      	      <a class="prime" href="#">Testimonials</a>
      	    </li>
