--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/ionicon.min.css">
     <link rel="stylesheet" href="./css/stylesheet.css">
+
     <!-- Fonts -->
 
   </head>
@@ -17,7 +18,7 @@
     <nav id="topNav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle Navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -68,7 +69,7 @@
 	  <div class="picture">
 	    <h1 class="fancy">Stacy McQuerrey Photography</h1>
 	    <h4 class="smaller">Let me capture your inner fairytale</h4>
-	    <hr>
+	    <hr class="hidden">
 	  </div>
 	</header>
 	<div class="quote">
