added about section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <hr>
      	      </ul>
      	    <li>
-     	      <a class="prime" href="#">About Me</a>
+     	      <a class="prime" href="#about">About Me</a>
      	    </li>
      	    <li>
      	      <a class="prime" href="#">Testimonials</a>
@@ -74,9 +74,26 @@
 	</header>
 	<div class="quote">
 	  <div class="container-fluid">
-		<h5 id="inner-quote"> Quotie quote quote quote </h5>
+		<h4 id="inner-quote" class="text-center"> "Once in awhile, right in the middle of an ordinary life, Love gives us a fairy tale" -Anonymous </h4>
 	  </div>
 	</div>
+	<section id="about">
+	  <div class="container">
+	  	<h3 id="subtitle" class="text-center"> About Me </h3>
+	    <img src="./assets/profile2.jpg" alt="Stacy">
+	  </div>
+	  <div>
+	    <h3 id="about-name"> Stacy McQuerrey</h3>
+	      <h4 id="about-blurb">Experienced wedding and fantasy photographer <span><h6>Galion, Ohio</h6></span></h4>
+	      <hr>
+	  </div>
+	  <div id="information"> 
+	  <p class="aboutp">Hello, I'm Stacy!<br>I'm an independent photographer that resides in Galion, Ohio. I am located close to an hour from Columbus and am willing to travel to meet in a closer area to shoot.</p>
+	  <br> <p class="aboutp">I have pursued a career as a professional photographer for well over 10 years. During my photography journey I have found that photographing people, to me cannot be compared to anything else. To capture the raw beauty behind the eyes in what I am after. I have always been facinated with the advertisements in magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
+	   <!--  <h4 id="small-header">Experience: Every love story is beautiful. Creating each wedding set to tell the story of your love through photos, for generations to come, is one of the greatest joys of being a photographer. They are the fairytales - the happily ever afters, that exist outside of the books.</h4> -->
+	     
+	  </div>
+	</section>
 
 
 
