added to About Section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li class="dropdown-header">Specials</li>
                 <li><a href="#">Custom Dresses</a></li>
                 <li><a href="#">Weddings</a></li>
-                <hr>
+                <li role="separator" class="divider"></li>
      	      </ul>
      	    <li>
      	      <a class="prime" href="#about">About Me</a>
@@ -83,14 +83,18 @@
 	    <img src="./assets/profile2.jpg" alt="Stacy">
 	  </div>
 	  <div>
+	    <br>
 	    <h3 id="about-name"> Stacy McQuerrey</h3>
 	      <h4 id="about-blurb">Experienced wedding and fantasy photographer <span><h6>Galion, Ohio</h6></span></h4>
-	      <hr>
+	      <hr class="abouthr">
 	  </div>
 	  <div id="information"> 
-	  <p class="aboutp">Hello, I'm Stacy!<br>I'm an independent photographer that resides in Galion, Ohio. I am located close to an hour from Columbus and am willing to travel to meet in a closer area to shoot.</p>
-	  <br> <p class="aboutp">I have pursued a career as a professional photographer for well over 10 years. During my photography journey I have found that photographing people, to me cannot be compared to anything else. To capture the raw beauty behind the eyes in what I am after. I have always been facinated with the advertisements in magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
-	   <!--  <h4 id="small-header">Experience: Every love story is beautiful. Creating each wedding set to tell the story of your love through photos, for generations to come, is one of the greatest joys of being a photographer. They are the fairytales - the happily ever afters, that exist outside of the books.</h4> -->
+	  <p class="aboutp">Hello, I'm Stacy!<br>I'm a professional photographer that resides in Galion, Ohio - near Mansfield. I photograph Weddings, engagements, portraits, and model all across Ohio.</p>
+	  <br> 
+	  <p class="aboutp">I have pursued a career as an independent photographer for well over 10 years. During my photography journey I have found that photographing people, to me cannot be compared to anything else. To capture the raw beauty behind the eyes in what I am after. I have always been fascinated with the models in advertisements contained within magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
+	  <br>
+	  <h4 id="small-header">Experience:</h4> 
+	  <p class="aboutp"> Wedding Photography, Fairytale/Fantasy, Senior Portraits, Engagements, Maternity, Family Portraits and Animals. <!-- Every love story is beautiful. Creating each wedding set to tell the story of your love through photos, for generations to come, is one of the greatest joys of being a photographer. They are the fairytales - the happily ever afters, that exist outside of the books. --></p>
 	     
 	  </div>
 	</section>
@@ -101,6 +105,6 @@
 	    <script src="./js/jquery.min.js"></script>
 	    <script src="./js/bootstrap.min.js"></script>
 	    <script src="./js/jquery.easing.min.js"></script>
-	    <script src="./js/script.js"></script>
+	    <!-- <script src="./js/script.js"></script> -->
   </body>
 </html>
