finishing up About Section

--- a/index.html
+++ b/index.html
@@ -85,17 +85,23 @@
 	  <div>
 	    <br>
 	    <h3 id="about-name"> Stacy McQuerrey</h3>
-	      <h4 id="about-blurb">Experienced wedding and fantasy photographer <span><h6>Galion, Ohio</h6></span></h4>
+	      <h4 id="about-blurb">Experienced Wedding and Fantasy Photographer <span><h6>Galion, Ohio</h6></span></h4>
 	      <hr class="abouthr">
 	  </div>
 	  <div id="information"> 
-	  <p class="aboutp">Hello, I'm Stacy!<br>I'm a professional photographer that resides in Galion, Ohio - near Mansfield. I photograph Weddings, engagements, portraits, and model all across Ohio.</p>
-	  <br> 
-	  <p class="aboutp">I have pursued a career as an independent photographer for well over 10 years. During my photography journey I have found that photographing people, to me cannot be compared to anything else. To capture the raw beauty behind the eyes in what I am after. I have always been fascinated with the models in advertisements contained within magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
-	  <br>
-	  <h4 id="small-header">Experience:</h4> 
-	  <p class="aboutp"> Wedding Photography, Fairytale/Fantasy, Senior Portraits, Engagements, Maternity, Family Portraits and Animals. <!-- Every love story is beautiful. Creating each wedding set to tell the story of your love through photos, for generations to come, is one of the greatest joys of being a photographer. They are the fairytales - the happily ever afters, that exist outside of the books. --></p>
-	     
+	      <p class="aboutp">Hello, I'm Stacy!<br>I'm a professional photographer that resides in Galion, Ohio - near Mansfield. I photograph Weddings, engagements, portraits, and model all across Ohio.</p>
+	        <br>
+	    <h4 id="small-header">Experience:</h4> 
+	      <p class="aboutp"> Wedding Photography, Fairytale/Fantasy, Boudoir, Senior Portraits, Engagements, Maternity, Family Portraits and Animals. <!-- Every love story is beautiful. Creating each wedding set to tell the story of your love through photos, for generations to come, is one of the greatest joys of being a photographer. They are the fairytales - the happily ever afters, that exist outside of the books. --></p>
+	        <br>
+	    <h4 id="small-header">Passions:</h4> 
+	      <p class="aboutp">Many of my passions go hand and hand with my love of photography. In my spare time, I enjoy creating beautiful, flowing or flowered dresses from ones I picked from second hand shops. I often put together the setting placement as well. I enjoy looking through Pinterest in search of my next hair inspiration or some make-up ideas. I spend time on YouTube trying to perfect hair and make-up techniques for my next shoot.</p>
+	        <br>
+	    <h4 id="small-header">Overview:</h4>
+	      <p class="aboutp">I have pursued a career as an independent photographer for well over 10 years. During my photography journey I have found that photographing people, to me cannot be compared to any other type of photography. To capture the raw beauty behind the eyes in what I am after. I have always been fascinated with the models in advertisements contained within magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
+	        <br>
+	        <br>
+
 	  </div>
 	</section>
 
