Added Testimonial Section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      	      <a class="prime" href="#about">About Me</a>
      	    </li>
      	    <li>
-     	      <a class="prime" href="#">Testimonials</a>
+     	      <a class="prime" href="#testimonials">Testimonials</a>
      	    </li>
      		</ul>
      		<ul class="nav navbar-nav navbar-right" class="prime">
@@ -89,7 +89,7 @@
 	      <hr class="abouthr">
 	  </div>
 	  <div id="information"> 
-	      <p class="aboutp">Hello, I'm Stacy!<br>I'm a professional photographer that resides in Galion, Ohio - near Mansfield. I photograph Weddings, engagements, portraits, and model all across Ohio.</p>
+	      <p class="aboutp">Hello, I'm Stacy!<br>I'm a photography enthusiast that resides in Galion, Ohio - near Mansfield. I photograph Weddings, engagements, portraits, and model all across Ohio.</p>
 	        <br>
 	    <h4 id="small-header">Experience:</h4> 
 	      <p class="aboutp"> Wedding Photography, Fairytale/Fantasy, Boudoir, Senior Portraits, Engagements, Maternity, Family Portraits and Animals. <!-- Every love story is beautiful. Creating each wedding set to tell the story of your love through photos, for generations to come, is one of the greatest joys of being a photographer. They are the fairytales - the happily ever afters, that exist outside of the books. --></p>
@@ -98,12 +98,59 @@
 	      <p class="aboutp">Many of my passions go hand and hand with my love of photography. In my spare time, I enjoy creating beautiful, flowing or flowered dresses from ones I picked from second hand shops. I often put together the setting placement as well. I enjoy looking through Pinterest in search of my next hair inspiration or some make-up ideas. I spend time on YouTube trying to perfect hair and make-up techniques for my next shoot.</p>
 	        <br>
 	    <h4 id="small-header">Overview:</h4>
-	      <p class="aboutp">I have pursued a career as an independent photographer for well over 10 years. During my photography journey I have found that photographing people, to me cannot be compared to any other type of photography. To capture the raw beauty behind the eyes in what I am after. I have always been fascinated with the models in advertisements contained within magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
+	      <p class="aboutp">I have pursued a career as an independent photographer for well over 10 years. During my photography journey, I have found that photographing people cannot be compared to any other type of photography. To capture the raw beauty behind the eyes in what I am after. I have always been fascinated with the models in advertisements contained within magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
 	        <br>
 	        <br>
-
 	  </div>
 	</section>
+	<div class="quote">
+	  <div class="container-fluid">
+		<h4 id="inner-quote" class="text-center"> "A camera is a Save button for the mind's eye" -Roger Kingston </h4>
+	  </div>
+	</div>
+	<section id="testimonials">
+	  <div class="container-fluid">
+	  	  <section id="outside" class="text-center">
+	  	      <img src="./assets/test1.jpg" class="test1">
+	  	      <h3 class="test-name"> Shannon Thouvenin</h3>
+	  	      <hr><br>
+	  	      <div class="info">"Stacy, is by far one of the most talented individuals I have ever met. There is no limit to her creativeness. Her ability to use lighting surpasses many, and she is great at being resourceful on the spot with new innovative ideas. Along side of photography she is fabulous at doing hair and make-up as well. Additionally, she creates some of the most beautiful dresses I have ever seen, each one of them unique and fit to suit each model perfectly. If being unbelievably talented isn't enough, she is one of the most inspiring people I know. She has the kindest heart and has touched many people's hearts in turn. I know she inspires me every day to be a better person and model!</div>
+	  	  </section>
+<!-- 	  	  <section id="outside" class="text-center">
+	  	      <img src="./assets/test1.jpg" class="test1">
+	  	  </section>
+	  	  <section id="outside" class="text-center">
+	  	      <img src="./assets/test1.jpg" class="test1">
+	  	  </section> -->
+	  </div>
+	</section>
+	<div class="quote">
+	  <div class="container-fluid">
+		<h4 id="inner-quote" class="text-center">"The artist sees what other only catch a glimpse of." -Leonardo DaVinci </h4>
+	  </div>
+	</div>
+	<footer class="panel-footer">
+      <div class="container-fluid">
+        <div class="row">
+          <section id="address" class="col-sm-6">
+          	<span>McQuerrey Studio:</span><br>
+          	252 John Street<br>
+            Galion, OH 44833
+          <p>*Please book a slot prior to arrival. Will travel half way within Ohio, or to location <span>(Will cost extra!)</span> </p>
+          <hr class="visible-xs">
+          </section>
+       	  <section id="contact-info" class="col-sm-6">
+            <span>Contact: </span><br>
+            <p>Stacy McQuerrey: (419) 612-2030</p>
+            <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McQuerreyS@yahoo.com</a>
+            <br>
+           <hr class="visible-xs">
+        </div>
+          <div class="text-center">&copy; Copyright Shannon Thouvenin 2017</div>
+        </section>
+       	</div>
+      </div>
+	</footer>
 
 
 
