Resized testimonials max-width

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           	<span>McQuerrey Studio:</span><br>
           	252 John Street<br>
             Galion, OH 44833
-          <p>*Please book a slot prior to arrival. Will travel half way within Ohio, or to location <span>(Will cost extra!)</span> </p>
+          <p>*Please book a slot prior to arrival. Will travel half way within Ohio, or to location <span>($25/50)</span> </p>
           <hr class="visible-xs">
           </section>
        	  <section id="contact-info" class="col-sm-6">
