added header for testimonial

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 	</div>
 	<section id="testimonials">
 	  <div class="container-fluid">
+	  <h3 id="subtitle" class="text-center"> Testimonials </h3>
 	  	  <section id="outside" class="text-center">
 	  	      <img src="./assets/test1.jpg" class="test1">
 	  	      <h3 class="test-name"> Shannon Thouvenin</h3>
