--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Style Sheets -->
     <link rel="stylesheet" href="./css/resets.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/ionicon.min.css">
+    <link rel="stylesheet" href="./css/ionicons.min.css" />
     <link rel="stylesheet" href="./css/stylesheet.css">
 
     <!-- Fonts -->
@@ -133,23 +133,27 @@
 	<footer class="panel-footer">
       <div class="container-fluid">
         <div class="row">
-          <section id="address" class="col-sm-6">
+          <section id="address" class="col-sm-4">
           	<span>McQuerrey Studio:</span><br>
           	252 John Street<br>
             Galion, OH 44833
           <p>*Please book a slot prior to arrival. Will travel half way within Ohio, or to location <span>($25/50)</span> </p>
           <hr class="visible-xs">
           </section>
-       	  <section id="contact-info" class="col-sm-6">
+       	  <section id="contact-info" class="col-sm-4">
             <span>Contact: </span><br>
             <p>Stacy McQuerrey: (419) 612-2030</p>
             <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McQuerreyS@yahoo.com</a>
             <br>
            <hr class="visible-xs">
+          </section>
+          <section id="social" class="col-sm-4">
+          <br>
+          <br>
+            <a href="https://www.facebook.com/stacy.mcquerrey" target="_blank"><i class="ion-social-facebook"><span>acebook</span></i></a>
+          </section>
         </div>
-          <div class="text-center">&copy; Copyright Shannon Thouvenin 2017</div>
-        </section>
-       	</div>
+       	<div class="text-center">&copy; Copyright Shannon Thouvenin 2017</div>
       </div>
 	</footer>
 
