--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@
 	    <script src="./js/jquery.min.js"></script>
 	    <script src="./js/bootstrap.min.js"></script>
 	    <script src="./js/jquery.easing.min.js"></script>
-	    <!-- <script src="./js/script.js"></script> -->
+	    <script src="./js/script.js"></script>
   </body>
 </html>
