Started portfolio section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
      	    <li>
-     	      <a class="prime" href="#">Home</a>
+     	      <a class="prime" href="#one">Home</a>
      	    </li>
      	    <li>
      	      <a class="dropdown prime" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria expanded="false">Portfolio<span class="caret"></span></a>
@@ -59,13 +59,13 @@
      		</ul>
      		<ul class="nav navbar-nav navbar-right" class="prime">
      	    <li>
-     	      <a class="prime" href="#">Contact</a>
+     	      <a class="prime" href="#bottom">Contact</a>
      	    </li>
      	  </ul>
 		</div>
 	  </div>
 	</nav>
-	<header class="one">
+	<header id="one" class="one">
 	  <div class="picture">
 	    <h1 class="fancy">Stacy McQuerrey Photography</h1>
 	    <h4 class="smaller">Let me capture your inner fairytale</h4>
@@ -130,7 +130,7 @@
 		<h4 id="inner-quote" class="text-center">"The artist sees what other only catch a glimpse of." -Leonardo DaVinci </h4>
 	  </div>
 	</div>
-	<footer class="panel-footer">
+	<footer id="bottom" class="panel-footer">
       <div class="container-fluid">
         <div class="row">
           <section id="address" class="col-sm-4">
