--- a/beauty-glamour.html
+++ b/beauty-glamour.html
@@ -34,7 +34,7 @@
             <li>
               <a class="dropdown prime" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a class="active" href="#">Beauty/Glamour</a></li>
+                <li><a href="#" class="active">Beauty/Glamour</a></li>
                 <li><a href="#">Fantasy</a></li>
                 <li><a href="#">Historical Fashion</a></li>
                 <li><a href="#">Fairytale</a></li>
@@ -91,5 +91,12 @@
         <div class="text-center">&copy; Copyright Shannon Thouvenin 2017</div>
       </div>
     </footer>
+
+
+
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.easing.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
   </html>
