--- a/boudoir.html
+++ b/boudoir.html
@@ -32,15 +32,15 @@
               <a class="prime" href="#one">Home</a>
             </li>
             <li>
-              <a class="dropdown prime" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria expanded="false">Portfolio<span class="caret"></span></a>
+              <a class="dropdown prime" id="dropdown-prime" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria expanded="false">Portfolio<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a class="active" href="#">Beauty/Glamour</a></li>
+                <li><a href="#">Beauty/Glamour</a></li>
                 <li><a href="#">Fantasy</a></li>
                 <li><a href="#">Historical Fashion</a></li>
                 <li><a href="#">Fairytale</a></li>
                 <li><a href="#">Ethereal</a></li>
                 <li><a href="#">Pinup</a></li>
-                <li><a href="#">Boudoir</a></li>
+                <li><a href="#" class="active">Boudoir</a></li>
                 <li><a href="#">Engagements</a></li>
                 <li><a href="#">Maternity</a></li>
                 <li><a href="#">Babies and Family Photos</a></li>
@@ -91,5 +91,12 @@
         <div class="text-center">&copy; Copyright Shannon Thouvenin 2017</div>
       </div>
     </footer>
+
+
+
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.easing.min.js"></script>
+   <!--  <script src="./js/script.js"></script> -->
   </body>
   </html>
