--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/stylesheet.css">
 
     <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
   </head>
   <body>
@@ -32,13 +33,15 @@
      	      <a class="prime" href="#one">Home</a>
      	    </li>
      	    <li>
-     	      <a class="dropdown prime" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria expanded="false">Portfolio<span class="caret"></span></a>
-     	      <ul class="dropdown-menu">
-                <li><a href="#">Beauty/Glamour</a></li>
-                <li><a href="#">Ethereal</a></li>
+     	      <a class="prime" href="#">Portfolio</a>
+     	      <!-- <ul class="dropdown-menu">
+				<li><a href="#">Beauty/Glamour</a></li>
                 <li><a href="#">Fantasy</a></li>
                 <li><a href="#">Historical Fashion</a></li>
                 <li><a href="#">Fairytale</a></li>
+                <li><a href="#">Ethereal</a></li>
+                <li><a href="#">Pinup</a></li>
+                <li><a href="#">Boudoir</a></li>
                 <li><a href="#">Engagements</a></li>
                 <li><a href="#">Maternity</a></li>
                 <li><a href="#">Babies and Family Photos</a></li>
@@ -49,7 +52,7 @@
                 <li><a href="#">Custom Dresses</a></li>
                 <li><a href="#">Weddings</a></li>
                 <li role="separator" class="divider"></li>
-     	      </ul>
+     	      </ul> -->
      	    <li>
      	      <a class="prime" href="#about">About Me</a>
      	    </li>
@@ -61,7 +64,7 @@
      	    <li>
      	      <a class="prime" href="#bottom">Contact</a>
      	    </li>
-     	  </ul>
+     	   </ul>
 		</div>
 	  </div>
 	</nav>
@@ -115,7 +118,7 @@
 	  	      <img src="./assets/test1.jpg" class="test1">
 	  	      <h3 class="test-name"> Shannon Thouvenin</h3>
 	  	      <hr><br>
-	  	      <div class="info">"Stacy, is by far one of the most talented individuals I have ever met. There is no limit to her creativeness. Her ability to use lighting surpasses many, and she is great at being resourceful on the spot with new innovative ideas. Along side of photography she is fabulous at doing hair and make-up as well. Additionally, she creates some of the most beautiful dresses I have ever seen, each one of them unique and fit to suit each model perfectly. If being unbelievably talented isn't enough, she is one of the most inspiring people I know. She has the kindest heart and has touched many people's hearts in turn. I know she inspires me every day to be a better person and model!</div>
+	  	      <div class="info">"Stacy, is by far one of the most talented individuals I have ever met. There is no limit to her creativeness. Her ability to use lighting surpasses many, and she is great at being resourceful on the spot with new innovative ideas. Along side of photography she is fabulous at doing hair and make-up as well. Additionally, she creates some of the most beautiful dresses I have ever seen, each one of them unique and fit to suit each model perfectly. If being unbelievably talented isn't enough, she is one of the most inspiring people I know. She has the kindest heart and has touched many people's hearts in turn. I know she inspires me every day to be a better person and model!"</div>
 	  	  </section>
 <!-- 	  	  <section id="outside" class="text-center">
 	  	      <img src="./assets/test1.jpg" class="test1">
@@ -161,6 +164,6 @@
 	    <script src="./js/jquery.min.js"></script>
 	    <script src="./js/bootstrap.min.js"></script>
 	    <script src="./js/jquery.easing.min.js"></script>
-	    <script src="./js/script.js"></script>
+<!-- 	    <script src="./js/script.js"></script> -->
   </body>
 </html>
