Adjustments to cover photo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stacy M Photography</title>
-    <meta name="description" content="Stacy McQuerrey's Photography Page and Portfolio">
+    <meta name="description" content="Stacy Mcquerrey's Photography Page and Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style Sheets -->
     <link rel="stylesheet" href="./css/resets.css">
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand heading" href="#home">Stacy McQuerrey</a>
+        <a class="navbar-brand heading" href="#home">Stacy Mcquerrey</a>
         </div>
      	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
@@ -70,7 +70,7 @@
 	</nav>
 	<header id="one" class="one">
 	  <div class="picture">
-	    <h1 class="fancy">Stacy McQuerrey Photography</h1>
+	    <h1 class="fancy">Stacy Mcquerrey Photography</h1>
 	    <h4 class="smaller">Let me capture your inner fairytale</h4>
 	    <hr class="hidden">
 	  </div>
@@ -87,7 +87,7 @@
 	  </div>
 	  <div>
 	    <br>
-	    <h3 id="about-name"> Stacy McQuerrey</h3>
+	    <h3 id="about-name"> Stacy Mcquerrey</h3>
 	      <h4 id="about-blurb">Experienced Wedding and Fantasy Photographer <span><h6>Galion, Ohio</h6></span></h4>
 	      <hr class="abouthr">
 	  </div>
@@ -137,7 +137,7 @@
       <div class="container-fluid">
         <div class="row">
           <section id="address" class="col-sm-4">
-          	<span>McQuerrey Studio:</span><br>
+          	<span>Mcquerrey Studio:</span><br>
           	252 John Street<br>
             Galion, OH 44833
           <p>*Please book a slot prior to arrival. Will travel half way within Ohio, or to location <span>($25/50)</span> </p>
@@ -145,8 +145,8 @@
           </section>
        	  <section id="contact-info" class="col-sm-4">
             <span>Contact: </span><br>
-            <p>Stacy McQuerrey: (419) 612-2030</p>
-            <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McQuerreyS@yahoo.com</a>
+            <p>Stacy Mcquerrey: (419) 612-2030</p>
+            <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McquerreyS@yahoo.com</a>
             <br>
            <hr class="visible-xs">
           </section>
@@ -154,7 +154,7 @@
             <a href="https://www.facebook.com/stacy.mcquerrey" target="_blank"><i class="ion-social-facebook"><span>acebook</span></i></a>
           </section>
         </div>
-       	<div class="text-center">&copy; Copyright Shannon Thouvenin 2017</div>
+       	<div class="text-center">&copy; Copyright Mcquerrey Studios 2017</div>
       </div>
 	</footer>
 
