--- a/gallery.html
+++ b/gallery.html
@@ -30,10 +30,10 @@
      	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
      	    <li>
-     	      <a class="prime" href="#one">Home</a>
+     	      <a class="prime" href="index.html#one">Home</a>
      	    </li>
      	    <li>
-     	      <a class="prime" href="gallery.html">Portfolio</a>
+     	      <a class="prime" href="#">Portfolio</a>
      	      <!-- <ul class="dropdown-menu">
 				<li><a href="#">Beauty/Glamour</a></li>
                 <li><a href="#">Fantasy</a></li>
@@ -54,15 +54,15 @@
                 <li role="separator" class="divider"></li>
      	      </ul> -->
      	    <li>
-     	      <a class="prime" href="#about">About Me</a>
+     	      <a class="prime" href="index.html#about">About Me</a>
      	    </li>
      	    <li>
-     	      <a class="prime" href="#testimonials">Testimonials</a>
+     	      <a class="prime" href="index.html#testimonials">Testimonials</a>
      	    </li>
      		</ul>
      		<ul class="nav navbar-nav navbar-right" class="prime">
      	    <li>
-     	      <a class="prime" href="#bottom">Contact</a>
+     	      <a class="prime" href="index.html#bottom">Contact</a>
      	    </li>
      	   </ul>
 		</div>
