added to testimonials

--- a/index.html
+++ b/index.html
@@ -34,25 +34,6 @@
      	    </li>
      	    <li>
      	      <a class="prime" href="gallery.html">Portfolio</a>
-     	      <!-- <ul class="dropdown-menu">
-				<li><a href="#">Beauty/Glamour</a></li>
-                <li><a href="#">Fantasy</a></li>
-                <li><a href="#">Historical Fashion</a></li>
-                <li><a href="#">Fairytale</a></li>
-                <li><a href="#">Ethereal</a></li>
-                <li><a href="#">Pinup</a></li>
-                <li><a href="#">Boudoir</a></li>
-                <li><a href="#">Engagements</a></li>
-                <li><a href="#">Maternity</a></li>
-                <li><a href="#">Babies and Family Photos</a></li>
-                <li><a href="#">Senior Portraits</a></li>
-                <li><a href="#">Animals</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Specials</li>
-                <li><a href="#">Custom Dresses</a></li>
-                <li><a href="#">Weddings</a></li>
-                <li role="separator" class="divider"></li>
-     	      </ul> -->
      	    <li>
      	      <a class="prime" href="#about">About Me</a>
      	    </li>
@@ -111,23 +92,38 @@
 		<h4 id="inner-quote" class="text-center"> "A camera is a Save button for the mind's eye" -Roger Kingston </h4>
 	  </div>
 	</div>
-	<section id="testimonials">
+	<div id="testimonials">
 	  <div class="container-fluid">
-	  <h3 id="subtitle" class="text-center"> Testimonials </h3>
+
+	  <h3 id="subtitle" class="text-center"> Testimonials </h3>    
+       <section class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4">
 	  	  <section id="outside" class="text-center">
-	  	      <img src="./assets/test1.jpg" class="test1">
+	  	      <img src="./assets/test1.jpg" class="test">
 	  	      <h3 class="test-name"> Shannon Thouvenin</h3>
 	  	      <hr><br>
-	  	      <div class="info">"Stacy, is by far one of the most talented individuals I have ever met. There is no limit to her creativeness. Her ability to use lighting surpasses many, and she is great at being resourceful on the spot with new innovative ideas. Along side of photography she is fabulous at doing hair and make-up as well. Additionally, she creates some of the most beautiful dresses I have ever seen, each one of them unique and fit to suit each model perfectly. If being unbelievably talented isn't enough, she is one of the most inspiring people I know. She has the kindest heart and has touched many people's hearts in turn. I know she inspires me every day to be a better person and model!"</div>
+	  	      <div class="info">"Stacy, is by far one of the most creative and talented individuals I have ever met. There is no limit to her creativeness and her ideas are so unique, you will not see anything else like hers. Her ability to use lighting surpasses many, and she is great at being resourceful on the spot with new innovative ideas. Along side of photography she is fabulous at doing hair and make-up as well. Additionally, she creates some of the most beautiful dresses I have ever seen, each one of them unique and fit to suit each model perfectly. If being unbelievably talented isn't enough, she is one of the most inspiring people I know. She has the kindest heart and has touched many people's hearts in turn. I know she inspires me every day to be a better person and model!"</div>
 	  	  </section>
-<!-- 	  	  <section id="outside" class="text-center">
-	  	      <img src="./assets/test1.jpg" class="test1">
-	  	  </section>
+      </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">        
+        <section id="outside" class="text-center">
+            <img src="./assets/nicole.jpg" class="test">
+            <h3 class="test-name"> Nicole Spain </h3>
+            <hr><br>
+            <div class="info"> There is so much I could say about this woman and no words could describe how phenomenal she is. As a person and a professional she is truly beautiful, inspiring, honest, helpful and an all around blast to be around! I can say without a doubt my experiences with her have aided me in my modeling journey so much. She allowed me to see something within myself that I could not and filled me with such hope. This is someone that will not just make you feel special for one day but can impact you for the rest of your life. The memories and experiences are something I will personally always cherish every time. This spunky woman is so incredibly talented and creative. She makes jaw dropping dresses and headpieces unlike anything I have seen. She has the best ability at using what she has in multiple settings and still making you and your experience feel like one in a million. If I could create images that define the word passion, it would be in all of Stacys photographs. I just love this woman and everything she represents. I never thought fairytales could exist until I saw this woman's masterpieces. </div>
+        </section>
+      </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
 	  	  <section id="outside" class="text-center">
-	  	      <img src="./assets/test1.jpg" class="test1">
-	  	  </section> -->
-	  </div>
-	</section>
+	  	      <img src="./assets/brian.jpg" class="test">
+            <h3 class="test-name"> Brian Parker </h3>
+            <hr><br>
+            <div class="info">"I have modeled for a long time, and I have shot with photographers all over the nation and abroad. I have never shot with a photographer who puts in more effort than Stacy Mcquerrey. I saw Stacy's work about a year ago, and I had been trying to set up a shoot with her for a while. We finally scheduled a shoot together a few months ago. She didn't have much experience shooting male models. However, her inexperience shooting male models did not show during our shoot. Stacy formulated the ideas and even guided me on how to pose. I really felt like an amateur shooting with her because I did not do any of the work. Stacy had planned the whole shoot originally outside, but due to weather conditions we had to wing the shoot in an indoor location. This did not stop Stacy from perfecting an idea. We probably shot for 1-2 hours and her photoset was some of the best photos I have in my portfolio. One of her photos is even my avatar to my Facebook page. The reason Stacy is great behind the camera is her experience and creativity. She has been shooting models for many years and her work shows it. She is a professional no doubt about it. Stacy will put in the work with her desire to create the best photo that other photographers will take for granted. Stacy is just an amazing person to be around. I am a professional underwear and travel model, and I regularly get paid for my time during shoots. However, my skill level is in no way close to Stacy's professionalism. She is one of the only photographers I would pay for a shoot, and I am really looking forward to collaborating on more art with Stacy in the future."</div>
+	  	  </section>
+     </div>
+	  </section>
+	</div>
+</div>
 	<div class="quote">
 	  <div class="container-fluid">
 		<h4 id="inner-quote" class="text-center">"The artist sees what other only catch a glimpse of." -Leonardo DaVinci </h4>
